# business-process-manual

./: .gitignore  Makefile  README.md  conf.py  index.rst  preview.tf  pyproject.toml  renovate.json
.github/: matchers.json
.github/workflows/: build-artifact.yml  build-main.yml  build-pull-request.yml  cloudfront-deploy.yml  terraform-apply.yml  terraform-destroy.yml
.styles/RoboJackets/: cardholder.yml
.styles/config/vocabularies/RoboJackets/: accept.txt
bill-spend-expense/: corporate-credit-card-policy.rst  offboarding.rst  order-physical-card.rst  reimbursement-policy.rst  request-account.rst
corporate/: address-changes.rst  board-meetings.rst  bookkeeping-standards.rst  calendar.rst  conflict-of-interest-policy.rst  domain-names.rst  identifiers.rst  key-vendors.rst  merchandise-sales.rst  officer-changes.rst
corporate/finance/: 1099k.rst  990ez.rst  bookkeeping-standards.rst  budget-review.rst  cash-check-handling.rst  cash-handling.rst  check-handling.rst  collecting-sales-tax.rst  georgia-tech-payments.rst  index.rst  monthly-reconciliation.rst  receipt-standards.rst  sales-tax-exemption.rst  sales-tax.rst
nested-directory/: index.rst
ramp/: accounting-guide.rst  cardholder-audit.rst  expense-policy.rst  offboarding.rst  onboarding.rst  physical-card.rst
