[tool.poetry]
name = "business-process-manual"
version = "0"
description = "Documentation describing business processes within RoboJackets"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "8.2.3"
sphinx-autobuild = "2025.8.25"
sphinxext-opengraph = "0.12.0"
furo = {git = "https://github.com/pradyunsg/furo"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
